@startuml

hide empty members

class UIClickable {
  +UnityEvent<UIClickable> OnClick
  -Button button
  #void Start()
  +void Click()
  +{static} GameObject CopyPrefabToParent(GameObject, Transform, string)
}

class HeaderCard {
  +{static} readonly string prefabAddress = "Prefabs/UI/Cards/HeaderCard"
  -{static} GameObject staticPrefab
  +UnityEvent<UIClickable> OnRemoved
  -Image bkgImage
  -TextMeshProUGUI header
  -Button closeButton
  -UIBackgroundSprite spriteEnum
  +string Header
  +UIBackgroundSprite BackgroundSprite
  +Material Material
  #void Start()
  -void OnRemove()
  +Button GetCloseButton()
  -void HeaderErrorCheck()
  -void BackgroundImageErrorCheck()
  +{static} HeaderCard Spawn(Transform, UIBackgroundSprite, string)
}

class NameAndValueCard {
  +{static} readonly string prefabAddress = "Prefabs/UI/Cards/NameAndValueCard"
  -{static} GameObject staticPrefab
  -NameValuePair nameValuePair
  +string Name
  +string Value
  +{static} NameAndValueCard Spawn(Transform, UIBackgroundSprite, string, string, string)
}

class DictionaryCard {
  +{static} new readonly string prefabAddress = "Prefabs/UI/Cards/DetailedCard"
  -{static} GameObject staticPrefab
  -Dictionary<string, NameValuePair> items
  -GameObject textArea
  -GameObject NameValuePairPrefab
  +string this[string key]
  +void AddItem(string, string)
  +void DeleteItem(string)
  +{static} DictionaryCard Spawn(Transform, UIBackgroundSprite, string)
}

class UICardManager {
  +HeaderCard AddHeaderCard(UIBackgroundSprite, string)
  +NameAndValueCard AddNameValueCard(UIBackgroundSprite, string, string, string)
  +DictionaryCard AddDictionaryCard(UIBackgroundSprite, string)
  +void Clear()
}

class UIResourcePool {
  -{static} readonly Dictionary<UIBackgroundSprite, Sprite> BackgroundSprites
  +{static} Sprite GetBackgroundSprite(UIBackgroundSprite)
}

enum UIBackgroundSprite {
  Red
  Green
  Blue
  Yellow
  Orange
  OrangeButton
  Purple
  +{static} string GetAddress()
}

UIClickable --|> "Inherits from" HeaderCard
HeaderCard --|> "Inherits from" NameAndValueCard
HeaderCard --|> "Inherits from" DictionaryCard


@enduml